--- a/package.json
+++ b/package.json
@@ -10,12 +10,12 @@
   "repository": "https://github.com/plaid/quickstart",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "1.15.x",
-    "ejs": "2.4.x",
-    "envvar": "1.1.x",
-    "express": "4.13.x",
-    "firebase": "^4.11.0",
-    "moment": "2.17.x",
-    "plaid": "2.0.x"
+    "body-parser": "^1.18.2",
+    "ejs": "^2.5.7",
+    "envvar": "^2.0.0",
+    "express": "^4.16.3",
+    "firebase": "^4.12.0",
+    "moment": "^2.21.0",
+    "plaid": "^2.3.1"
   }
 }
