--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.16.3",
     "firebase": "^4.12.0",
     "moment": "^2.21.0",
-    "plaid": "^2.3.1"
+    "plaid": "^2.3.1",
+    "uuid": "^3.2.1"
   }
 }
