--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "firebase": "^4.12.0",
     "moment": "^2.21.0",
     "plaid": "^2.3.1",
+    "stripe": "^5.6.1",
     "uuid": "^3.2.1"
   }
 }
